fixed: RAEDME with missing release page link
updated: version bump to 0.1.0

updated: manifest.json - value of isDesktopOnly changed to true

--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,5 @@
     "description": "Open external link with specific browser in Obsidian",
     "author": "MamoruDS",
     "authorUrl": "https://github.com/MamoruDS",
-    "isDesktopOnly": false
+    "isDesktopOnly": true
 }
