--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "id": "obsidian-open-link-with",
     "name": "Open Link With",
-    "version": "0.1.4",
+    "version": "0.1.5",
+    "minAppVersion": "0.11.13",
     "description": "Open external link with specific browser in Obsidian",
     "author": "MamoruDS",
     "authorUrl": "https://github.com/MamoruDS",
